Login and location on map work

--- a/PeopleMon/Info.plist
+++ b/PeopleMon/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Say yes mother fucker</string>
 </dict>
 </plist>
